# servermind-mcp-server

./: .dockerignore  .env.example  .env.test  .gitignore  BUGFIX_README.md  CLINE_SETUP_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  POSTMAN_TESTING.md  README.md  SETUP_TOKEN_AUTH.md  SPLIT_WORKFLOW_SUMMARY.md  TOOL_PARAMETERS.md  WORKFLOW_PROMPT_IMPROVEMENTS.md  cline-mcp-config.json  config.example.json  config.test.json  create-splunk-token.sh  debug_mcp_server.py  docker-compose.yml  docker-run-env.sh  docker-run-persistent.sh  docker-run.sh  package-lock.json  package.json  postman-collection.json  pyproject.toml  requirements.txt  servermind-mcp-server-flowchart.html  test-mcp-connection.sh  test_dict_validation_fix.py  test_enhanced_prompt_tools.py  test_fixes.py  test_full_flow.py  test_full_mcp_client.py  test_hierarchical_issues.py  test_local_splunk.py  test_mcp_client.py  test_mcp_server.py  test_server.py  (+3 more)
.clinerules/: documentation-help.md
Splunk MCP Server API/: bruno.json  collection.bru
Splunk MCP Server API/Advanced Queries/: Complex Analytics Query.bru  Search with Eval and Where.bru  Top Command Query.bru  folder.bru
Splunk MCP Server API/Error Testing/: Empty Query.bru  Invalid Query.bru  Invalid Tool Name.bru  folder.bru
Splunk MCP Server API/Health Check/: Root Endpoint.bru  SSE Endpoint.bru  folder.bru
Splunk MCP Server API/MCP Protocol/: Initialize Connection.bru  List Resources.bru  List Tools.bru  folder.bru
Splunk MCP Server API/Splunk Search Tool/: Basic Search - Index Main.bru  Metadata Query - Sources.bru  Search Kubernetes Index.bru  Search with Custom Timeout.bru  Stats Query - Count by Host.bru  Timechart Query.bru  folder.bru
coverage/: index.html
coverage/lcov-report/: index.html
demo_tests/DEMO-123/: README.md  run_tests.sh
demo_tests/DEMO-456/: README.md  run_tests.sh
src/: __init__.py  config.py  github_server.py  jira_server.py  server.py
src/github/: client.py
src/jira/: __init__.py  client.py
src/prompts/: analyze_traces_narrative.txt  automated_issue_creation.txt  bug_fix_executor.txt  chain_1_prompt.txt  chain_2_prompt.txt  chain_3_prompt.txt  expand_fetch_by_traceids.txt  extract_trace_ids_for_search.txt  find_splunk_index_in_repo.txt  group_error_logs_prompt.txt  group_error_logs_prompt.txt.txt  group_results_by_traceid.txt  logs_debug_entry_plan_template.txt  logs_evaluation_prompt.txt  root_cause_identification_prompt.txt  shared_plan_template.txt  splunk_log_analysis.txt  splunk_query_prompt.txt  test_integration_pytest.txt  test_regression_pytest.txt  test_reproduction_pytest.txt  test_unit_pytest.txt  ticket_split_prepare.txt
src/splunk/: README.md  __init__.py  client.py  search.py  utils.py
src/tools/: README_PROMPT_TOOLS.md  __init__.py  analyze_traces_narrative.py  automated_issue_creation.py  bug_fix_executor.py  chain_1_prompt.py  chain_2_prompt.py  chain_3_prompt.py  expand_fetch_by_traceids.py  export.py  extract_trace_ids_for_search.py  find_splunk_index_in_repo.py  github.py  github_tool.py  group_error_logs_prompt.py  group_error_logs_prompt.txt.py  group_results_by_traceid.py  indexes.py  issue_reader.py  jira.py  jira_tool.py  logs_debug_entry.py  logs_evaluation_prompt.py  monitor.py  prompt.py  resolve_splunk_index.py  root_cause_identification_prompt.py  search.py  splunk_error_search.py  splunk_log_analysis.py  splunk_query_prompt.py  splunk_trace_search_by_ids.py  test_reproduction.py  ticket_split_prepare.py
src/transport/: __init__.py  sse.py
tests/: __init__.py  readme.test.js  test_readme.py  test_server.py
tests/integration/: test_export_integration.py  (+3 more)
(+32 files in other folders)
